Apply third quarter CSS and fix img alignment

--- a/style.css
+++ b/style.css
@@ -98,7 +98,9 @@ a {
     display: flex;
     align-items: center ;
     justify-content: center;
-    gap: 48px;
+    gap: 52px;
+    padding-right: 20%;
+    padding-left: 20%;
 }
 
 .txt-img {
@@ -119,4 +121,28 @@ a {
     justify-content: center;
     align-items: center;
     width: 150px
+}
+
+.third {
+    display: flex;
+    flex-direction: column;
+    height: 400px;
+    background-color: #e5e7eb;
+    color: #1f2937;
+    font-size: 36px;
+    justify-content: center;
+    padding-left: 20%;
+    padding-right: 20%;
+}
+
+#quote {
+    font-style: italic;
+    margin-bottom: 16px;
+}
+
+#quotename {
+    margin-top: 0px;
+    display: flex;
+    font-weight: bolder;
+    justify-content: flex-end;
 }
